# Habits

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci-cd..yml  ci-cd.yaml  deploy.yml
habits_project/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
habits_project/habits/: apps.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
habits_project/habits/migrations/: 0001_initial.py
habits_project/users/: apps.py  models.py
habits_project/users/migrations/: 0001_initial.py
